--- a/index.html
+++ b/index.html
@@ -1,18 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Spotify Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
-    right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
-    Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
-    It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
-    latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
-    own personal playlist. Or sit back and enjoy Radio.
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Spotify Clone</title>
+  <link rel="stylesheet" href="/styles/style.css">
+</head>
+
+<body>
+  <header>
+    <div class="header-section">
+      <img class="spotify-logo" src="/images/spotify-logo.png" alt="spotify-logo">
+      <nav>
+        <ul>
+
+          <li class="nav-link"><a href="#dssd"> Premium</a></li>
+          <li class="nav-link"><a href="#"> Discover</a></li>
+          <li class="nav-link"><a href="#"> Help</a></li>
+          <li class="nav-link"><a href="#">Download</a></li>
+        </ul>
+      </nav>
+    </div>
+
+  </header>
+
+
+
+  <section class="hero-banner">
+    <div class="hero-banner-content">
+      <h1>Music for everyone.</h1>
+
+      <p>Spotify is now free on mobile, tablet and computer. Listen to the right music, wherever you are.</p>
+    </div>
+  </section>
+
+
+  <section class="feature-section">
+    <h2 class="section-title">What’s on Spotify?</h2>
+    <div class="features">
+
+      <div class="feature-item">
+        <img class="feature-item-image" src="/images/music-icon.png" />
+        <h3 class="feature-item-title">Millions of Songs</h3>
+        <p class="feature-item-content">There are millions of songs on Spotify</p>
+      </div>
+
+      <div class="feature-item">
+        <img class="feature-item-image" src="/images/high-quality-icon.png" />
+        <h3 class="feature-item-title">HD Music</h3>
+        <p class="feature-item-content">Listen to music as if you were listening live</p>
+      </div>
+
+      <div class="feature-item">
+        <img class="feature-item-image" src="/images/devices-icon.png" />
+        <h3 class="feature-item-title">Stream everywhere</h3>
+        <p class="feature-item-content">Stream music on your smartphone, tablet or computer</p>
+      </div>
+
+    </div>
+  </section>
+
+  <section>
+    
+  </section>
+</body>
+
 </html>
+
+
+
+
+<!----Premium Discover Help Download Music for everyone. Spotify is now free on mobile, tablet and computer. Listen to the
+right music, wherever you are. What’s on Spotify? Millions of Songs There are millions of songs on Spotify HD Music
+Listen to music as if you were listening live Stream Everywhere Stream music on your smartphone, tablet or computer
+It’s as yeezy as Kanye West. Search Know what you want to listen to? Just search and hit play. Browse Check out the
+latest charts, brand new releases and great playlists for right now. Discover Enjoy new music every Monday with your
+own personal playlist. Or sit back and enjoy Radio.-->
